--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,20 @@
-input[type=button]{
+*{
+    margin-top: 50px;
+}
+
+body{
+    text-align: center;
+    background-color: black;
+    color: white;
+}
+
+
+input.GameInput{
     width: 100px;
     height: 100px;
     color: black;
+    border: solid 0px white;
+    margin: 30px 50px;
 }
 
 .blue{
@@ -26,4 +39,15 @@ input[type=button]{
 
 .loose{
     background: red;
+}
+.info > *{
+    display: inline;
+    font-size: 30px;
+}
+
+.turnNo{
+    color: red;
+}
+.turnYes{
+    color: green;
 }
